Revert "fix number alignment"
This reverts commit 90cf9ee213e36ad43c0531edbdd2db19760a230f.

--- a/styles/designs/carnival/parts/_exercises-components.scss
+++ b/styles/designs/carnival/parts/_exercises-components.scss
@@ -244,7 +244,7 @@ $Exercise__ProblemSolution__Number: (
   _name: "ProblemSolutionNumber",
   _subselector: ' > .os-number',
   _properties: (
-    display: inline,
+    display: table-cell,
     text-decoration: none,
     color: enum('ValueSet:::REQUIRED'),
     font-weight: bold,
