--- a/styles/output/nursing-internal-pdf.css
+++ b/styles/output/nursing-internal-pdf.css
@@ -3418,7 +3418,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-review-questions-container [data-type=exercise] [data-type=problem] > .os-number {
-  display: inline;
+  display: table-cell;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3466,7 +3466,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-review-questions-container [data-type=injected-exercise] [data-type=exercise-question] > .os-number {
-  display: inline;
+  display: table-cell;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3516,7 +3516,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-check-understanding-container [data-type=exercise] [data-type=problem] > .os-number {
-  display: inline;
+  display: table-cell;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3564,7 +3564,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-check-understanding-container [data-type=injected-exercise] [data-type=exercise-question] > .os-number {
-  display: inline;
+  display: table-cell;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3614,7 +3614,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-critical-thinking-container [data-type=exercise] [data-type=problem] > .os-number {
-  display: inline;
+  display: table-cell;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3662,7 +3662,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-critical-thinking-container [data-type=injected-exercise] [data-type=exercise-question] > .os-number {
-  display: inline;
+  display: table-cell;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3712,7 +3712,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-competency-based-container [data-type=exercise] [data-type=problem] > .os-number {
-  display: inline;
+  display: table-cell;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3760,7 +3760,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-competency-based-container [data-type=injected-exercise] [data-type=exercise-question] > .os-number {
-  display: inline;
+  display: table-cell;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3810,7 +3810,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-reflection-questions-container [data-type=exercise] [data-type=problem] > .os-number {
-  display: inline;
+  display: table-cell;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3858,7 +3858,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-reflection-questions-container [data-type=injected-exercise] [data-type=exercise-question] > .os-number {
-  display: inline;
+  display: table-cell;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3908,7 +3908,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-what-nurses-do-container [data-type=exercise] [data-type=problem] > .os-number {
-  display: inline;
+  display: table-cell;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3956,7 +3956,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-what-nurses-do-container [data-type=injected-exercise] [data-type=exercise-question] > .os-number {
-  display: inline;
+  display: table-cell;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -4058,7 +4058,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-eob [data-type=solution] > .os-number {
-  display: inline;
+  display: table-cell;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -4092,7 +4092,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-eob [data-type=question-solution] > .os-number {
-  display: inline;
+  display: table-cell;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
